# pi-squared

./: .gitignore  CMakeLists.txt  README.md  hsvTool.cc  main.cc  server
3picode/: M1Speed.cpp  M1Speed.h  M2Speed.cpp  M2Speed.h  Makefile  PiCommandFactory.cpp  PiCommandFactory.h  Print.cpp  Print.h  SerialManager.cpp  SerialManager.h  compile.sh  m1Speed.h  m2Speed.h  main.cc  main.cpp  piCommand.h  piCommandFactory.cpp  piCommandFactory.h  print.h  serialManager.cpp
docs/: setup
pi2core/: AlgorithmInterface.h  CMakeLists.txt  ColorBallAlgorithm.cpp  ColorBallAlgorithm.h  CommandQueue.cpp  CommandQueue.h  FrameQueue.cpp  FrameQueue.h  HTTPServer.cpp  HTTPServer.h  HTTPServerManager.cpp  HTTPServerManager.h  JSONService.cpp  JSONService.h  RemoteAlg.cpp  RemoteAlg.h  SocketServerManager.cpp  SocketServerManager.h  TestAlg.cpp  TestAlg.h  controller.cpp  logic.cpp  logic.h  logic1.cpp  logic1.h  machineVisionMain.cpp  opencvcam.cpp  opencvcam.h  pi2serialenums.h  rpicamera.cpp  rpicamera.h  tcpconnector.cpp  tcpconnector.h  visionInterface.h
remotePi/: README.md
remotePi/3PiController/: MainConsoleController.h  MainWindow.xib  mainConsole.xib
remotePi/3PiController/3PiController/: AppDelegates.h  AppDelegates.m  Info.plist  MainConsoleController.m  RootView.xib  SettingView.xib  SettingViewController.h  SettingViewController.m  Test.h  ViewController.h  ViewController.m  main.m
remotePi/3PiController/3PiController.xcodeproj/: project.pbxproj
remotePi/server/: client.py  server  server.c  tcpserver.py
src/: visionTest.cpp
static/: config.js  index.html
(+14 files in other folders)
